# retch-http

./: Cargo.toml  README.md  client.js  package.json
.github/workflows/: CI.yml  build_and_test.yml
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/header_generator/: header_generator.rs  mod.rs
src/retcher/: mod.rs  retcher.rs
src/tests/: basic.rs  compression.rs  e2e.rs  mod.rs  requests.rs  server.rs
src/tests/server/: compression.rs  mod.rs  request_headers.rs
