[package]
edition = "2021"
name = "rust-http-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-compression = { version="0.4.12", features = ["all"] }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"
reqwest = { version = "0.12.7", features = ["json", "gzip", "brotli", "zstd", "deflate"] }
rocket = "0.5.1"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version="1.40.0", features = ["full"] }
url = "2.5.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
